# enocean-core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  build_info.hpp.in  index.html  west.yml
.github/workflows/: docs.yml  posix.yml
application/: AppEntry.cpp  AppEntry.hpp  CMakeLists.txt
boards/common/: CMakeLists.txt
boards/common/igpio/: CMakeLists.txt  GpioError.hpp  IGpio.hpp
boards/common/iserial/: CMakeLists.txt  ISerial.hpp  SerialError.hpp
boards/common/iwatchdog/: CMakeLists.txt  IWatchdog.hpp  WatchdogError.hpp
boards/posix/: CMakeLists.txt
boards/posix/debug/: launch.json.in  tasks.json.in
boards/posix/gpio/: CMakeLists.txt  Gpio.cpp  Gpio.hpp
boards/posix/led/: CMakeLists.txt  Led.cpp  Led.hpp
boards/zephyr/: CMakeLists.txt
boards/zephyr/gpio/: CMakeLists.txt  Gpio.cpp  Gpio.hpp
boards/zephyr/led/: CMakeLists.txt  Led.cpp  Led.hpp
boards/zephyr/watchdog/: CMakeLists.txt  Watchdog.cpp  Watchdog.hpp
cmake/: add_codechecker.cmake  add_common_flags.cmake  ccache.cmake  generate_build_info.cmake  generate_codecheck_skips.cmake  sanitizers.cmake
docs/: AppEntry_8cpp_source.html  AppEntry_8hpp.html  AppEntry_8hpp__dep__incl.map  AppEntry_8hpp__dep__incl.md5  AppEntry_8hpp__incl.map  AppEntry_8hpp__incl.md5  AppEntry_8hpp_source.html  BleError_8hpp.html  BleError_8hpp__dep__incl.map  BleError_8hpp__dep__incl.md5  BleError_8hpp__incl.map  BleError_8hpp__incl.md5  BleError_8hpp_source.html  CryptoError_8hpp.html  CryptoError_8hpp__dep__incl.map  CryptoError_8hpp__dep__incl.md5  CryptoError_8hpp__incl.map  CryptoError_8hpp__incl.md5  CryptoError_8hpp_source.html  EnoceanDriverTests_8cpp.html  EnoceanDriverTests_8cpp_source.html  EnoceanDriver_8hpp.html  EnoceanDriver_8hpp__dep__incl.map  EnoceanDriver_8hpp__dep__incl.md5  EnoceanDriver_8hpp__incl.map  EnoceanDriver_8hpp__incl.md5  EnoceanDriver_8hpp_source.html  EnoceanDriver_8ipp.html  EnoceanDriver_8ipp__dep__incl.map  EnoceanDriver_8ipp__dep__incl.md5  EnoceanDriver_8ipp__incl.map  EnoceanDriver_8ipp__incl.md5  EnoceanDriver_8ipp_source.html  EnoceanError_8hpp.html  EnoceanError_8hpp__dep__incl.map  EnoceanError_8hpp__dep__incl.md5  EnoceanError_8hpp__incl.map  EnoceanError_8hpp__incl.md5  EnoceanError_8hpp_source.html  EnoceanTypes_8hpp.html  (+966 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+100 more)
include/error_handler/: ErrorHandler.hpp
include/logging/: Logger.hpp
platform/common/: CMakeLists.txt
platform/common/ible/: BleError.hpp  CMakeLists.txt  IBle.hpp
platform/common/icrypto/: CMakeLists.txt  CryptoError.hpp  ICrypto.hpp
platform/common/imessage_queue/: CMakeLists.txt  IMessageQueue.hpp  MessageQueueError.hpp
platform/common/imutex/: CMakeLists.txt  IMutex.hpp  MutexError.hpp
platform/common/isemaphore/: CMakeLists.txt  ISemaphore.hpp  SemaphoreError.hpp
platform/common/isleep/: CMakeLists.txt  ISleep.hpp
platform/common/ithread/: CMakeLists.txt  IThread.hpp  ThreadError.hpp
platform/posix_core/: CMakeLists.txt  posix_main.cpp
platform/posix_core/ble/: Ble.cpp  Ble.hpp  CMakeLists.txt
platform/posix_core/config/: c_cpp_properties.json.in
platform/posix_core/config/static_analyse/: clang_tidy_args.txt  clang_tidy_config.json  cppcheck_config.json  misra_addon.json
platform/posix_core/crypto/: CMakeLists.txt  Crypto.cpp  Crypto.hpp
platform/posix_core/message_queue/: CMakeLists.txt  MessageQueue.hpp  MessageQueue.ipp
platform/posix_core/mutex/: CMakeLists.txt  Mutex.cpp  Mutex.hpp
platform/posix_core/semaphore/: CMakeLists.txt  Semaphore.cpp  Semaphore.hpp
platform/posix_core/sleep/: CMakeLists.txt  Sleep.cpp  Sleep.hpp
platform/posix_core/thread/: CMakeLists.txt  Thread.cpp  Thread.hpp
platform/zephyr_core/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  debug.conf  prj.conf  sysbuild.cmake  sysbuild.conf  zephyr_main.cpp
platform/zephyr_core/ble/: Ble.cpp  Ble.hpp  CMakeLists.txt
platform/zephyr_core/boards/: nrf7002dk_nrf5340_cpuapp.conf
platform/zephyr_core/config/: c_cpp_properties.json.in
platform/zephyr_core/config/static_analyse/: clang_tidy_args.txt  clang_tidy_config.json  misra_rules.txt
platform/zephyr_core/crypto/: CMakeLists.txt  Crypto.cpp  Crypto.hpp
platform/zephyr_core/logging/: CMakeLists.txt  ZephyrAppender.cpp  ZephyrAppender.hpp
platform/zephyr_core/message_queue/: CMakeLists.txt  MessageQueue.hpp  MessageQueue.ipp
platform/zephyr_core/mutex/: CMakeLists.txt  Mutex.cpp  Mutex.hpp
platform/zephyr_core/semaphore/: CMakeLists.txt  Semaphore.cpp  Semaphore.hpp
platform/zephyr_core/sleep/: Sleep.cpp  Sleep.hpp
platform/zephyr_core/sysbuild/: CMakeLists.txt
platform/zephyr_core/sysbuild/mcuboot/: prj.conf
platform/zephyr_core/sysbuild/mcuboot/boards/: nrf52840dk_nrf52840.conf  nrf7002dk_nrf5340_cpuapp.conf
platform/zephyr_core/thread/: CMakeLists.txt  Thread.cpp  Thread.hpp
platform/zephyr_core/usb_common/: Kconfig.common_usbd  common.cmake  common_usbd.c  common_usbd.h
scripts/: format_cmake.py
scripts/static_analyse/: codechecker_runner.py
src/: CMakeLists.txt
src/enocean/: CMakeLists.txt  EnoceanDriver.hpp  EnoceanDriver.ipp  EnoceanError.hpp  EnoceanTypes.hpp
test/: CMakeLists.txt
test-results/posix/: index.html
test/enocean_driver_test/: CMakeLists.txt  EnoceanDriverTests.cpp
test/error_handler_test/: CMakeLists.txt  ErrorHandlerTests.cpp
test/message_queue_test/: CMakeLists.txt  MessageQueueTests.cpp
test/mutex_test/: CMakeLists.txt  MutexTests.cpp
test/semaphore_test/: CMakeLists.txt  SemaphoreTests.cpp
test/thread_test/: CMakeLists.txt  ThreadTests.cpp
zephyr/: module.yml
